# dbus-xemmai

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
dbus/xemmai/: Makefile.am  cast.h  connection.cc  connection.h  dbus.cc  dbus.h  message.cc  message.h  reply.cc  reply.h
src/: CMakeLists.txt  Makefile.am  cast.h  connection.cc  connection.h  dbus.cc  dbus.h  message.cc  message.h  reply.cc  reply.h
test/: CMakeLists.txt  Makefile.am  test.xm
